Ticket: #FT-1208 SubTicket: # Component: Changes: 1.Fixed Bug - When submitting new request on tablet, the submit and cancel buttons on bottom of form disappear after updating a form field.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/dataentry.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/dataentry.less
@@ -454,6 +454,7 @@ body .document-dataentry.page-level-message-container {
 }
 
 .document-dataentry .edit-title-group {
+	display: block !important;
 	line-height: 38px;
 	padding-top: 15px;
 
